#28 create cdn and serve s3 bucket from cdn

--- a/public/error.html
+++ b/public/error.html
@@ -1,1 +1,11 @@
-THere is an error
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>uh oh ERROR</title>
+</head>
+<body>
+    <h1> ERROR </h1>
+</body>
+</html>
