--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello there Terraformers!!!</h1>
+    <img src="/assets/Fallout3DC.jpg">
+    <img src="/assets/LoneWanderer.jpg">
 </body>
 </html>
