#52 Fixed resource-storageTF assets upload and HTML img src path

--- a/public/chocolateChip/index.html
+++ b/public/chocolateChip/index.html
@@ -6,7 +6,7 @@
     <title>Chocolate Chip Cookie</title>
 </head>
 <body>
-    <h1>The ideal Chocolate Chip Cookie</h1>
-    <img src="/chocolateChip/assets/Chocchip.jpg">
+    <h1>The Best Chocolate Chip Cookie </h1>
+    <img src="/assets/Chochip.jpg">
 </body>
 </html>
