--- a/public/fallout3/index.html
+++ b/public/fallout3/index.html
@@ -6,7 +6,7 @@
     <title>Hello Terraformers</title>
 </head>
 <body>
-    <h1>Hello there Terraformers!!!</h1>
+    <h1>Fallout3 is the Best!</h1>
     <img src="/assets/Fallout3DC.jpg">
     <img src="/assets/LoneWanderer.jpg">
 </body>
