Final changes to frontend and markdown

--- a/public/fallout3/index.html
+++ b/public/fallout3/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-    <div id="playButtonText">Click me to enter!</div>
+    <div id="playButtonText">Click me to enter!
+        <br>(Turn up volume!)
+    </div>
     <img id="playButton" src="assets/Vaultboy.png" alt="Play">
 
     <div id="background-container" style="display: none;">
@@ -19,6 +21,7 @@
                 truly forge their own path in this desolate world. The choices and moral decisions players make have significant impacts on 
                 the storyline and the world around them, adding depth and replayability. 
             </p>
+            <br>
             <p>The game's rich narrative, combined with its open-world design, 
                 encourages exploration and discovery, with a multitude of quests and hidden secrets that reward curiosity. Additionally, the V.A.T.S. combat system adds a 
                 strategic layer to encounters, making combat both thrilling and tactical. All these elements combined make "Fallout 3" a compelling and memorable experience in the gaming world.
